[gd_scene load_steps=5 format=3 uid="uid://dxw3n8kqj2xqj"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_world"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_entrance"]
size = Vector2(64, 32)

[ext_resource type="Texture2D" uid="uid://greenhouse_tileset" path="res://assets/sprites/greenhouse_tileset.png" id="2_tileset"]
[ext_resource type="PackedScene" uid="uid://fanstation001" path="res://scenes/equipment/fan_station.tscn" id="3_fan"]
[ext_resource type="PackedScene" uid="uid://heatpump001" path="res://scenes/equipment/heat_pump.tscn" id="4_heatpump"]
[ext_resource type="PackedScene" uid="uid://watertank001" path="res://scenes/equipment/water_tank.tscn" id="5_watertank"]
[ext_resource type="PackedScene" uid="uid://tomatoplant001" path="res://scenes/tomato_plant.tscn" id="6_plant"]
[ext_resource type="PackedScene" uid="uid://irrigation001" path="res://scenes/equipment/irrigation_panel.tscn" id="7_irrigation"]
[ext_resource type="PackedScene" uid="uid://ventstation001" path="res://scenes/equipment/vent_station.tscn" id="8_vent"]
[ext_resource type="PackedScene" uid="uid://worker001" path="res://scenes/worker.tscn" id="9_worker"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_entrance"]
size = Vector2(64, 32)

[node name="World" type="Node2D"]
script = ExtResource("1_world")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("2_tileset")
region_enabled = true
region_rect = Rect2(0, 0, 1152, 648)
centered = false

[node name="Floor" type="Sprite2D" parent="."]
position = Vector2(64, 64)
texture_repeat = 2
texture = ExtResource("2_tileset")
region_enabled = true
region_rect = Rect2(64, 64, 1024, 520)
centered = false

[node name="Path" type="Sprite2D" parent="."]
position = Vector2(512, 64)
texture_repeat = 2
texture = ExtResource("2_tileset")
region_enabled = true
region_rect = Rect2(128, 64, 128, 520)
centered = false

[node name="Plants" type="Node2D" parent="."]

[node name="TomatoPlant1" parent="Plants" instance=ExtResource("6_plant")]
position = Vector2(160, 160)

[node name="TomatoPlant2" parent="Plants" instance=ExtResource("6_plant")]
position = Vector2(160, 224)

[node name="TomatoPlant3" parent="Plants" instance=ExtResource("6_plant")]
position = Vector2(160, 288)

[node name="TomatoPlant4" parent="Plants" instance=ExtResource("6_plant")]
position = Vector2(224, 160)

[node name="Equipment" type="Node2D" parent="."]

[node name="FanStation" parent="Equipment" instance=ExtResource("3_fan")]
position = Vector2(100, 100)

[node name="HeatPump" parent="Equipment" instance=ExtResource("4_heatpump")]
position = Vector2(250, 100)

[node name="WaterTank" parent="Equipment" instance=ExtResource("5_watertank")]
position = Vector2(400, 100)

[node name="IrrigationPanel" parent="Equipment" instance=ExtResource("7_irrigation")]
position = Vector2(550, 100)

[node name="VentStation" parent="Equipment" instance=ExtResource("8_vent")]
position = Vector2(700, 100)

[node name="NPCs" type="Node2D" parent="."]

[node name="Gardener" parent="NPCs" instance=ExtResource("9_worker")]
position = Vector2(576, 324)
worker_type = 1
worker_name = "Alex"

[node name="Technician" parent="NPCs" instance=ExtResource("9_worker")]
position = Vector2(700, 324)
worker_type = 0
worker_name = "Sam"

[node name="Manager" parent="NPCs" instance=ExtResource("9_worker")]
position = Vector2(800, 324)
worker_type = 2
worker_name = "Charlie"

[node name="Walls" type="Node2D" parent="."]

[node name="LeftWall" type="Sprite2D" parent="Walls"]
position = Vector2(32, 324)
texture = ExtResource("2_tileset")
region_enabled = true
region_rect = Rect2(0, 64, 64, 520)

[node name="RightWall" type="Sprite2D" parent="Walls"]
position = Vector2(1120, 324)
texture = ExtResource("2_tileset")
region_enabled = true
region_rect = Rect2(192, 64, 64, 520)

[node name="TopWall" type="Sprite2D" parent="Walls"]
position = Vector2(576, 32)
texture = ExtResource("2_tileset")
region_enabled = true
region_rect = Rect2(0, 0, 1024, 64)

[node name="EntranceArea" type="Area2D" parent="."]
position = Vector2(576, 584)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntranceArea"]
shape = SubResource("RectangleShape2D_entrance")

[node name="EntranceMarker" type="Marker2D" parent="EntranceArea"]

[connection signal="body_entered" from="EntranceArea" to="." method="_on_entrance_area_body_entered"]
